# cpp_project_template

./: .gitignore  CMakeLists.txt  README.md
docs/: CMakeLists.txt
include/: header_template.h
src/: main.cpp
tests/: CMakeLists.txt
